--- a/mediawiki/.htaccess
+++ b/mediawiki/.htaccess
@@ -1,3 +1,7 @@
 <FilesMatch "\.php\?">
   Header set Content-Type "text/html"
 </FilesMatch>
+
+RewriteEngine on
+RewriteCond %{QUERY_STRING} (.+)
+RewriteRule ^(index\.php)$ $1\%3F%1 [L]
